fix alert color contrast on dark theme

--- a/src/scss/components/_alert.scss
+++ b/src/scss/components/_alert.scss
@@ -1,5 +1,6 @@
 .alert {
 	background-color: #d9edf7;
+	color: black;
 	padding: 0.5em;
 
 	.icon {
